--- a/src/app/main/partners/style.scss
+++ b/src/app/main/partners/style.scss
@@ -166,7 +166,7 @@ div.plus-one {
     partner-component {
         width: calc(100% * (1/3) - 10px) !important;
     }
-    #onlinecheck{
+    #onlinecheck, #locationcheck {
         margin-left: -10px !important;
         display: flex;
     }
@@ -182,7 +182,7 @@ div.plus-one {
         }
     }
 
-    #onlinecheck{
+    #onlinecheck, #locationcheck {
         margin-left: -10px !important;
         display: flex;
     }
@@ -239,7 +239,7 @@ div.plus-one {
         display: flex !important;
     }
 
-    #onlinecheck{
+    #onlinecheck, #locationcheck {
         margin-left: -10px !important;
         display: flex;
     }
